fix time var bug