@@ -29,7 +29,9 @@ import org.apache.seatunnel.web.spi.enums.Status;
 import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.Date;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -39,10 +41,12 @@ import java.util.stream.Collectors;
 @Slf4j
 public class SeaTunnelClientServiceImpl implements SeaTunnelClientService {
 
-    private static final Set<String> SUPPORTED_CLIENT_VERSIONS = Set.of(
-            "2.3.12",
-            "2.3.13"
-    );
+    private static final Set<String> SUPPORTED_CLIENT_VERSIONS =
+            new HashSet<>(Arrays.asList("2.3.12", "2.3.13"));
+
+    private static final long DEFAULT_DATASOURCE_VERIFY_TIMEOUT_MS = 15000L;
+
+    private static final long DEFAULT_DATASOURCE_VERIFY_POLL_INTERVAL_MS = 1000L;
 
     @Resource
     private SeaTunnelClientDao seaTunnelClientDao;
@@ -58,58 +62,31 @@ public class SeaTunnelClientServiceImpl implements SeaTunnelClientService {
 
     @Override
     public void saveOrUpdate(SeaTunnelClientDTO dto) {
-        validate(dto);
+        validateSaveOrUpdateRequest(dto);
 
         Date now = new Date();
-
         String baseUrl = SeaTunnelClientUrlUtils.buildBaseUrl(
                 dto.getClientAddress(),
                 dto.getClientPort()
         );
 
         if (dto.getId() == null) {
-            SeaTunnelClient entity = new SeaTunnelClient();
-            BeanUtils.copyProperties(dto, entity);
-
-            entity.setBaseUrl(baseUrl);
-
-
-            fillVersionFromOverview(baseUrl, entity);
-
-            entity.setHealthStatus(SeaTunnelClientHealthStatusEnum.LIVE.getCode());
-            entity.setCreateTime(now);
-            entity.setUpdateTime(now);
-
-            seaTunnelClientDao.insert(entity);
+            createClient(dto, baseUrl, now);
             return;
         }
 
-        SeaTunnelClient entity = getEntity(dto.getId());
-        BeanUtils.copyProperties(dto, entity);
-
-        entity.setBaseUrl(baseUrl);
-
-
-        fillVersionFromOverview(baseUrl, entity);
-
-        entity.setHealthStatus(SeaTunnelClientHealthStatusEnum.LIVE.getCode());
-        entity.setUpdateTime(now);
-
-        seaTunnelClientDao.updateById(entity);
+        updateClient(dto, baseUrl, now);
     }
 
     @Override
     public SeaTunnelClientMetricsVO metrics(Long id) {
-        SeaTunnelClient entity = getEntity(id);
-        if (entity == null) {
-            throw new RuntimeException("entity is null");
-        }
+        getEntity(id);
 
         List<Map<String, Object>> metricsList =
                 seaTunnelRestClient.systemMonitoringInformation(id);
 
         Map<String, Object> metricMap =
-                (metricsList == null || metricsList.isEmpty()) ? null : metricsList.get(0);
+                metricsList == null || metricsList.isEmpty() ? null : metricsList.get(0);
 
         Double cpuUsage = MetricValueParser.parsePercent(
                 metricMap == null ? null : metricMap.get("load.system")
@@ -135,25 +112,37 @@ public class SeaTunnelClientServiceImpl implements SeaTunnelClientService {
     @Override
     public List<OptionVO> option() {
         try {
-            List<SeaTunnelClient> entities = seaTunnelClientDao.selectList(new LambdaQueryWrapper<>());
+            LambdaQueryWrapper<SeaTunnelClient> wrapper = new LambdaQueryWrapper<>();
+            wrapper.eq(
+                    SeaTunnelClient::getHealthStatus,
+                    SeaTunnelClientHealthStatusEnum.LIVE.getCode()
+            );
+            wrapper.orderByDesc(SeaTunnelClient::getCreateTime);
+
+            List<SeaTunnelClient> entities = seaTunnelClientDao.selectList(wrapper);
+
             return entities.stream()
-                    .map(item -> {
-                        OptionVO optionVO = new OptionVO();
-                        optionVO.setValue(item.getId());
-                        optionVO.setLabel(item.getClientName());
-                        optionVO.setDescription(item.getClientVersion());
-                        return optionVO;
-                    })
+                    .map(this::toOptionVO)
                     .collect(Collectors.toList());
+        } catch (ServiceException e) {
+            throw e;
         } catch (Exception e) {
-            throw new ServiceException(Status.INTERNAL_SERVER_ERROR_ARGS, e.getMessage());
+            log.error("Query SeaTunnel client option list failed", e);
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "查询 SeaTunnel 客户端选项失败"
+            );
         }
     }
 
     @Override
     public IPage<SeaTunnelClient> page(SeaTunnelClientPageDTO dto) {
-        int pageNo = dto == null || dto.getPageNo() == null || dto.getPageNo() <= 0 ? 1 : dto.getPageNo();
-        int pageSize = dto == null || dto.getPageSize() == null || dto.getPageSize() <= 0 ? 10 : dto.getPageSize();
+        int pageNo = dto == null || dto.getPageNo() == null || dto.getPageNo() <= 0
+                ? 1
+                : dto.getPageNo();
+        int pageSize = dto == null || dto.getPageSize() == null || dto.getPageSize() <= 0
+                ? 10
+                : dto.getPageSize();
 
         LambdaQueryWrapper<SeaTunnelClient> wrapper = new LambdaQueryWrapper<>();
         wrapper.orderByDesc(SeaTunnelClient::getCreateTime);
@@ -164,12 +153,18 @@ public class SeaTunnelClientServiceImpl implements SeaTunnelClientService {
     @Override
     public void deleteById(Long id) {
         if (id == null) {
-            throw new IllegalArgumentException("客户端 ID 不能为空");
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "客户端 ID 不能为空"
+            );
         }
 
         SeaTunnelClient entity = seaTunnelClientDao.selectById(id);
         if (entity == null) {
-            throw new IllegalArgumentException("客户端不存在, id=" + id);
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "客户端不存在, id=" + id
+            );
         }
 
         seaTunnelClientDao.deleteById(id);
@@ -178,60 +173,111 @@ public class SeaTunnelClientServiceImpl implements SeaTunnelClientService {
     @Override
     public ClientDatasourceVerifyVO verifyDatasource(Long clientId, ClientDatasourceVerifyDTO dto) {
         if (clientId == null) {
-            throw new IllegalArgumentException("clientId 不能为空");
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "clientId 不能为空"
+            );
         }
         if (dto == null || dto.getDatasourceId() == null) {
-            throw new IllegalArgumentException("datasourceId 不能为空");
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "datasourceId 不能为空"
+            );
         }
 
-        SeaTunnelClient client = seaTunnelClientDao.selectById(clientId);
-        if (client == null) {
-            throw new IllegalArgumentException("客户端不存在, clientId=" + clientId);
-        }
+        SeaTunnelClient client = getEntity(clientId);
         if (StringUtils.isBlank(client.getBaseUrl())) {
-            throw new IllegalArgumentException("客户端 baseUrl 不能为空, clientId=" + clientId);
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "客户端 baseUrl 不能为空, clientId=" + clientId
+            );
         }
 
         DataSource datasource = dataSourceService.selectById(dto.getDatasourceId());
         if (datasource == null) {
-            throw new IllegalArgumentException("数据源不存在, datasourceId=" + dto.getDatasourceId());
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "数据源不存在, datasourceId=" + dto.getDatasourceId()
+            );
         }
 
         DbType dbType = datasource.getDbType();
         DatasourceConnectivityVerificationStrategy strategy = strategyFactory.getStrategy(dbType);
 
         long timeoutMs = dto.getTimeoutMs() == null || dto.getTimeoutMs() <= 0
-                ? 15000L : dto.getTimeoutMs();
+                ? DEFAULT_DATASOURCE_VERIFY_TIMEOUT_MS
+                : dto.getTimeoutMs();
         long pollIntervalMs = dto.getPollIntervalMs() == null || dto.getPollIntervalMs() <= 0
-                ? 1000L : dto.getPollIntervalMs();
+                ? DEFAULT_DATASOURCE_VERIFY_POLL_INTERVAL_MS
+                : dto.getPollIntervalMs();
 
         return strategy.verify(client, datasource, timeoutMs, pollIntervalMs);
     }
 
+    private void createClient(SeaTunnelClientDTO dto, String baseUrl, Date now) {
+        SeaTunnelClient entity = new SeaTunnelClient();
+        BeanUtils.copyProperties(dto, entity);
+
+        entity.setBaseUrl(baseUrl);
+
+        verifyClientAndFillVersion(baseUrl, entity);
+
+        entity.setHealthStatus(SeaTunnelClientHealthStatusEnum.LIVE.getCode());
+        entity.setCreateTime(now);
+        entity.setUpdateTime(now);
+
+        seaTunnelClientDao.insert(entity);
+    }
+
+    private void updateClient(SeaTunnelClientDTO dto, String baseUrl, Date now) {
+        SeaTunnelClient entity = getEntity(dto.getId());
+
+        BeanUtils.copyProperties(dto, entity);
+
+        entity.setBaseUrl(baseUrl);
+
+        verifyClientAndFillVersion(baseUrl, entity);
+
+        entity.setHealthStatus(SeaTunnelClientHealthStatusEnum.LIVE.getCode());
+        entity.setUpdateTime(now);
+
+        seaTunnelClientDao.updateById(entity);
+    }
+
     /**
-     * 从 SeaTunnel Client overview 中获取版本。
+     * 校验 SeaTunnel Client 可用性，并从 overview 中填充客户端版本。
      *
-     * 这里同时承担三个职责：
+     * 这里会完成三件事情：
      * 1. 网络连通性检测：overview 调用失败则不允许保存 / 更新。
-     * 2. 版本识别：必须能拿到 projectVersion。
+     * 2. 版本识别：必须能从 overview 中获取到 projectVersion。
      * 3. 版本限制：目前仅支持 2.3.12 和 2.3.13。
      */
-    public void fillVersionFromOverview(String baseUrl, SeaTunnelClient entity) {
+    private void verifyClientAndFillVersion(String baseUrl, SeaTunnelClient entity) {
         if (StringUtils.isBlank(baseUrl)) {
-            throw new IllegalArgumentException("SeaTunnel 客户端地址不能为空");
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "SeaTunnel 客户端地址不能为空"
+            );
         }
 
         Map<String, Object> overview;
         try {
-            overview = seaTunnelRestClient.overview(baseUrl + "/overview", null);
+            overview = seaTunnelRestClient.overview(buildOverviewUrl(baseUrl), null);
         } catch (Exception e) {
-            log.warn("Fetch seatunnel client overview failed, baseUrl={}", baseUrl, e);
+            log.warn("Fetch SeaTunnel client overview failed, baseUrl={}", baseUrl, e);
             throw new ServiceException(
                     Status.INTERNAL_SERVER_ERROR_ARGS,
                     "SeaTunnel 客户端连接失败，请检查客户端地址、端口或 Zeta 引擎是否已启动"
             );
         }
 
+        String clientVersion = resolveClientVersion(overview);
+        checkSupportedClientVersion(clientVersion);
+
+        entity.setClientVersion(clientVersion);
+    }
+
+    private String resolveClientVersion(Map<String, Object> overview) {
         Object projectVersion = overview == null ? null : overview.get("projectVersion");
         if (projectVersion == null || StringUtils.isBlank(String.valueOf(projectVersion))) {
             throw new ServiceException(
@@ -240,40 +286,69 @@ public class SeaTunnelClientServiceImpl implements SeaTunnelClientService {
             );
         }
 
-        String clientVersion = String.valueOf(projectVersion).trim();
+        return String.valueOf(projectVersion).trim();
+    }
 
-        if (!SUPPORTED_CLIENT_VERSIONS.contains(clientVersion)) {
-            throw new ServiceException(
-                    Status.INTERNAL_SERVER_ERROR_ARGS,
-                    String.format(
-                            "当前 SeaTunnel 客户端版本为 %s，暂不支持。当前仅支持 %s",
-                            clientVersion,
-                            String.join("、", SUPPORTED_CLIENT_VERSIONS)
-                    )
-            );
+    private void checkSupportedClientVersion(String clientVersion) {
+        if (SUPPORTED_CLIENT_VERSIONS.contains(clientVersion)) {
+            return;
         }
 
-        entity.setClientVersion(clientVersion);
+        throw new ServiceException(
+                Status.INTERNAL_SERVER_ERROR_ARGS,
+                String.format(
+                        "当前 SeaTunnel 客户端版本为 %s，暂不支持。当前仅支持 %s",
+                        clientVersion,
+                        String.join("、", SUPPORTED_CLIENT_VERSIONS)
+                )
+        );
+    }
+
+    private String buildOverviewUrl(String baseUrl) {
+        return StringUtils.removeEnd(baseUrl, "/") + "/overview";
+    }
+
+    private OptionVO toOptionVO(SeaTunnelClient entity) {
+        OptionVO optionVO = new OptionVO();
+        optionVO.setValue(entity.getId());
+        optionVO.setLabel(entity.getClientName());
+        optionVO.setDescription(entity.getClientVersion());
+        return optionVO;
     }
 
     /**
      * 校验客户端保存参数
      */
-    private void validate(SeaTunnelClientDTO dto) {
+    private void validateSaveOrUpdateRequest(SeaTunnelClientDTO dto) {
         if (dto == null) {
-            throw new IllegalArgumentException("客户端参数不能为空");
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "客户端参数不能为空"
+            );
         }
         if (StringUtils.isBlank(dto.getClientName())) {
-            throw new IllegalArgumentException("客户端名称不能为空");
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "客户端名称不能为空"
+            );
         }
         if (StringUtils.isBlank(dto.getEngineType())) {
-            throw new IllegalArgumentException("引擎类型不能为空");
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "引擎类型不能为空"
+            );
         }
         if (StringUtils.isBlank(dto.getClientAddress())) {
-            throw new IllegalArgumentException("客户端地址不能为空");
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "客户端地址不能为空"
+            );
         }
         if (dto.getClientPort() == null) {
-            throw new IllegalArgumentException("客户端端口不能为空");
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "客户端端口不能为空"
+            );
         }
     }
 
@@ -281,9 +356,19 @@ public class SeaTunnelClientServiceImpl implements SeaTunnelClientService {
      * 查询客户端实体，不存在则抛异常
      */
     private SeaTunnelClient getEntity(Long id) {
+        if (id == null) {
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "客户端 ID 不能为空"
+            );
+        }
+
         SeaTunnelClient entity = seaTunnelClientDao.queryById(id);
         if (entity == null) {
-            throw new IllegalArgumentException("客户端不存在, id=" + id);
+            throw new ServiceException(
+                    Status.INTERNAL_SERVER_ERROR_ARGS,
+                    "客户端不存在, id=" + id
+            );
         }
         return entity;
     }
